impostate logiche di gioco e bozza finestra partita1v1